tests/fail/destruct_morphology_fail.stderr
error[E0448]: Pointer morphology mismatch: expected explicit '&' (from LHS/Target), found 'value' (from RHS/Source)
 --> tests/fail/destruct_morphology_fail.tk:14:38
   |
 14 |     auto RefPair(a = a, s = s_val) = t
   |                                      ^
error[E0406]: Cannot bind reference member 's' to a non-reference variable 's_val'. The variable name must explicitly carry the reference sigil '&'.
 --> tests/fail/destruct_morphology_fail.tk:14:38
   |
 14 |     auto RefPair(a = a, s = s_val) = t
   |                                      ^
